flux/apps/personal/qbittorrent-endpoint/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
    name: external-qbittorrent
    namespace: qbittorrent
subsets:
    - addresses:
          - ip: 192.168.2.40
      ports:
          - name: http
            port: 8212
            protocol: TCP
