flux/apps/personal/qbittorrent-endpoint/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: external-qbittorrent
    namespace: qbittorrent
spec:
    ports:
        - name: http
          port: 8212
          protocol: TCP
          targetPort: 8212
