flux/apps/personal/qbittorrent-endpoint/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: external-qbittorrent
    namespace: qbittorrent
spec:
    parentRefs:
        - name: internal-gateway
          namespace: kube-system
    hostnames:
        - "qbittorrent.internal.axiom.lucasfehres.nl"
    rules:
        - backendRefs:
              - name: external-qbittorrent
                port: 8212
